--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
   "name": "Serenity AI",
   "short_name": "Serenity",
+  "description": "Your personalized AI companion for chat, creativity, and daily updates.",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ec4899",
+  "background_color": "#0f172a",
+  "theme_color": "#8b5cf6",
   "orientation": "portrait-primary",
+  "categories": ["lifestyle", "social", "productivity"],
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/4712/4712109.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/9440/9440315.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/4712/4712109.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/9440/9440315.png",
       "sizes": "512x512",
       "type": "image/png"
     }
