--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#8b5cf6",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "categories": ["lifestyle", "social", "productivity"],
   "icons": [
     {
